# sandboxtank

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml
src/: DesktopACL.cpp  DesktopACL.h  Main.cpp  windows_include.hpp
src/hash/: crc.hpp  hash.hpp
src/sandbox/: Globals.cpp  Globals.hpp  JobProcess.cpp  JobProcess.hpp  ProcessContext.cpp  ProcessContext.hpp  ProgramArgs.cpp  ProgramArgs.hpp  SharedMemData.cpp  SharedMemData.hpp  SharedMemory.hpp  TokenProcess.cpp  TokenProcess.hpp
src/sandbox/config/: Config.cpp  Config.hpp  FlagParser.hpp
src/utils/: GuidUtils.cpp  GuidUtils.hpp  InterProcessMutex.cpp  InterProcessMutex.hpp  StringUtils.hpp  XorCipher.hpp  __all__.hpp
src/utils/sys/: ExplorerUtils.cpp  ExplorerUtils.hpp  ProcessUtils.cpp  ProcessUtils.hpp  __all__.hpp
src/utils/sys/safer/: DefaultSafeHandle.hpp  HandleSafe.hpp  LPPROC_THREAD_ATTRIBUTE_LIST.cpp  LPPROC_THREAD_ATTRIBUTE_LIST.hpp  PROCESS_INFORMATION.hpp  __all__.hpp
